tests/rosetta/out/C/approximate-equality.c
// Generated by Mochi compiler v0.10.26 on 2025-07-16T12:35:44Z
// Generated by Mochi compiler v0.10.26 on 2025-07-16T12:35:44Z
#include <stdio.h>
#include <stdlib.h>
#include <string.h>

typedef struct {
  int len;
  int *data;
} list_int;
static list_int list_int_create(int len) {
  list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  double *data;
} list_float;
static list_float list_float_create(int len) {
  list_float l;
  l.len = len;
  l.data = calloc(len, sizeof(double));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  list_int *data;
} list_list_int;
static list_list_int list_list_int_create(int len) {
  list_list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(list_int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
static char *concat_string(char *a, char *b) {
  size_t len1 = strlen(a);
  size_t len2 = strlen(b);
  char *buf = (char *)malloc(len1 + len2 + 1);
  memcpy(buf, a, len1);
  memcpy(buf + len1, b, len2);
  buf[len1 + len2] = '\0';
  return buf;
}
static char *_str(int v) {
  char *buf = (char *)malloc(32);
  sprintf(buf, "%d", v);
  return buf;
}
double abs(double x) {
  if (x < 0.0) {
    return (-x);
  }
  return x;
}

double maxf(double a, double b) {
  if (a > b) {
    return a;
  }
  return b;
}

int isClose(double a, double b) {
  double relTol = 0.000000001;
  double t = abs(a - b);
  double u = relTol * maxf(abs(a), abs(b));
  return t <= u;
}

double sqrtApprox(double x) {
  double guess = x;
  int i = 0;
  while (i < 10) {
    guess = (guess + x / guess) / 2.0;
    i = i + 1;
  }
  return guess;
}

int main() {
  double root2 = sqrtApprox(2.0);
  list_float pairs = list_float_create(2);
  pairs.data[0] = 100000000000000.02;
  pairs.data[1] = 100000000000000.02;
  list_float pairs = list_float_create(2);
  pairs.data[0] = 100.01;
  pairs.data[1] = 100.011;
  list_float pairs = list_float_create(2);
  pairs.data[0] = 10000000000000.002 / 10000.0;
  pairs.data[1] = 1000000000.0000001;
  list_float pairs = list_float_create(2);
  pairs.data[0] = 0.001;
  pairs.data[1] = 0.0010000001;
  list_float pairs = list_float_create(2);
  pairs.data[0] = 0.000000000000000000000101;
  pairs.data[1] = 0.0;
  list_float pairs = list_float_create(2);
  pairs.data[0] = root2 * root2;
  pairs.data[1] = 2.0;
  list_int pairs = list_int_create(2);
  pairs.data[0] = ((-root2)) * root2;
  pairs.data[1] = (-2.0);
  list_float pairs = list_float_create(2);
  pairs.data[0] = 100000000000000000.0;
  pairs.data[1] = 100000000000000000.0;
  list_float pairs = list_float_create(2);
  pairs.data[0] = 3.141592653589793;
  pairs.data[1] = 3.141592653589793;
  list_int pairs_data[] = {pairs, pairs,      pairs,      pairs,     pairs,
                           pairs, {2, pairs}, {2, pairs}, {2, pairs}};
  list_list_int pairs = {9, pairs_data};
  int pairs = pairs;
  for (int tmp1 = 0; tmp1 < 2; tmp1++) {
    list_float pair = pairs[tmp1];
    double a = pair.data[0];
    double b = pair.data[1];
    const char *s = (isClose(a, b) ? "≈" : "≉");
    char *tmp2 = _str(a);
    char *tmp3 = concat_string(tmp2, " ");
    char *tmp4 = concat_string(tmp3, s);
    char *tmp5 = concat_string(tmp4, " ");
    char *tmp6 = _str(b);
    char *tmp7 = concat_string(tmp5, tmp6);
    printf("%s\n", tmp7);
  }
}

int main() {
  main();
  return 0;
}
